Refactored Geolocation.jsx logic with added dates, visual fixes, created a new folder with helpers functions, splitted the code for easier readability and installed new npm packages. It it's not UI / UX optimsied but uploading it because i might down downgrade my react version

--- a/website/src/styles/Components/Geolocation.css
+++ b/website/src/styles/Components/Geolocation.css
@@ -72,6 +72,10 @@
   color: var(--color-uraniunBlue);
 }
 
+.measurement p{
+  margin: 0.5rem 0 0 0;
+}
+
 .measurementButtonContainer button{
   font-size: 1.2rem;
   font-weight: 700;
